<resources>
    <string name="app_name">mytaxi demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MainActivity -->
    <string name="text_hint_driver">Search driver here</string>

    <!-- MenuItems -->
    <string name="text_item_title_logout">Logout</string>

    <!-- DriverProfileActivity -->
    <string name="title_activity_driver_profile">Driver Profile</string>

    <!-- AuthenticationActivity -->
    <string name="title_activity_authentication">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="button_login">Login</string>
    <string name="message_login_fail">Login failed</string>

            <!--ADDED BY RACHANA -->
    <string name="message_Username_notnull">Username field can not be blank</string>
    <string name="message_Password_notnull">Password field can not be blank</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
